ava-rs/tui/src/history_cell/snapshots/ava_tui__history_cell__tests__multiline_command_wraps_with_extra_indent_on_subsequent_lines.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Ran set -o pipefail
  │ cargo test -p ava-tui
  │ --quiet
  └ (no output)
