ava-rs/tui/src/history_cell/snapshots/ava_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
╭─────────────────────────────────────╮
│ >_ OpenAI Ava (v0.0.0)            │
│                                     │
│ model:     gpt-5   /model to change │
│ directory: /tmp/project             │
╰─────────────────────────────────────╯

  Tip: Model just became available
